# fmsave

./: .fmsaverc.example  .gitignore  LICENSE  README.md  pyproject.toml
data/fmsave/: fmplanelu.py  fmsave.yaml
data/myflightpath/: myflightpath.yaml
data/openflights/: airlines.yaml  airports.yaml  openflights.yaml  planes.yaml
data/ourairports/: airports.yaml
data/wiki/: aircraft.csv  aircraft.yaml  aircraft_supplemental.csv
src/: airport.py  config.py  constants.py  data.py  data_dict.yaml  dataexport.py  defaults.py  exceptions.py  exec.py  fmdownload.py  fmplanelu.py  fmsave.py  fmvalidate.py  geonames.py  logging.yaml  logins.py  lookups.py  modules.py  utils.py
