[project]
name = "fmsave"
version = "0.1.0"
description = "Download, validate and export flightmemory.com flight data"
authors = [{ name = "Tom Marshall", email = "tom.q.marshall@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "pandas>=2.2.2",
    "pyyaml>=6.0.1",
    "thefuzz>=0.22.1",
    "geopy>=2.4.1",
    "beautifulsoup4>=4.12.3",
    "selenium>=4.21.0",
    "geonames>=0.1.3",
    "wikipedia>=1.4.0",
    "docopt>=0.6.2",
    "html5lib>=1.1",
    "lxml>=6.0.2",
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)",
    "pandas-stubs (>=2.3.3.260113,<3.0.0.0)",
    "types-beautifulsoup4 (>=4.12.0.20250516,<5.0.0.0)"
]
